--- a/Kustobsar.Ap2.Api/Views/Kustobsar/Index.cshtml
+++ b/Kustobsar.Ap2.Api/Views/Kustobsar/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Kustobsar.Ap2.Api.Models.KustobsarSighting>
+﻿@model System.Collections.Generic.IEnumerable<Kustobsar.Ap2.Api.Models.KustobsarSighting>
 @{
     Layout = null;
 }<?xml version='1.0' encoding='ISO-8859-1' ?>
